main/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');

html {
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    font-family: 'Open Sans', sans-serif;
    color: black;
    margin: 0;
    padding: 0;
    background-color: #f9b24a;
    scroll-behavior: smooth;
}
* {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
*, *:before, *:after {
    -webkit-box-sizing: inherit;
            box-sizing: inherit;
}
body {
    width: 100vw;
    max-width: 1000px;
    margin: 0 auto;
    padding: 0;
    background-color: white;
}
.header {
    width: 100%;
    height: 110px;
    margin: 0;
    padding: 20px;
    background: #f9b24a;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
}
.header__title {/*screen-readers-accessible, visually hidden */
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap; 
    border: 0;
}
.header__blog {
    font-size: 1.3rem;
    color: white;
    position: absolute;
    bottom: -55px;
    text-shadow: #000000 2px 2px;
}
.logo {
    width: auto;
    height: 70px;
}
@media screen and (max-width: 250px) {
    .logo {
        height: 20vw;
    }
}
.nav {
    height: 70px;
    width: auto;
    margin: 0;
    padding: 0;
    display: flex;
    flex-flow: column;
    justify-content: space-between;
    align-items: center;
    position: relative;
}
.menu {
    display: none;
}
.menu-open {
    display: flex;
    flex-flow: column;
    align-items: flex-end;
    width: 125px;
    margin: 0;
    padding: 0;
    position: absolute;
    left: -125px;
    top: 0;
    background-color: #ffffff;
    border-radius: 5px;
}
.menu__item, .menu__item:visited, .menu__item:active {
    text-decoration: none;
    text-align: right;
    padding: 10px;
    color: black;
}
.menu__item:hover {
    color: #d40000;
}
.menu-button {
    background: none;
    border: none;
    text-decoration: none;
    margin: 0;
    padding: 0;
    color: #ffffff00;
    cursor: pointer;
}
.menu-img {
    height: 30px;
    width: auto;
}
.language {
    margin: 0;
    padding: 0;
    font-weight: bold;
}
.language__button {
    background: none;
    border: none;
    text-decoration: none;
    cursor: pointer;
    color: #000000;
    margin: 0;
    padding: 0;
    text-decoration: none;
    font-size: 1rem;
}
.inactive {
    color: #ffffff8c;
    cursor: default;
}
.main {
    width: 100%;
    padding: 0px;
}
.up-button {
    display: block;
    position: fixed;
    bottom: 0px;
    right: 0px;
    z-index: 3;
    background: #f9b24a;
    padding: 5px 5px 0 5px;
    border-radius: 50% 50% 0 0;
    border-style: solid;
    border-width: 2px 2px 0 2px;
    border-color: #27326f;
    font-size: small;
    text-decoration: none;
    color: #27326f;
}
.banner-uskpoland {
    display: block;
    max-width: 100%;
    width: 100vw;
    height: calc(100vw * 0.439);
    margin: 0 auto;
    background-image: url(../images/pagegraphic/tarnow_baner_logo.jpg);
    background-repeat: no-repeat;
    background-position: center center;
    background-clip: border-box;
    background-size: contain;
}
@media screen and (min-width: 1000px) {
    .banner-uskpoland {
    height: 439px; /*adjust when changing picture*/
    }
}
.banner {
    display: block;
    max-width: 100%;
    width: 100vw;
    height: calc(100vw * 0.523);
    margin: 0 auto;
    background-image: url(../images/2023graphic/2023FestivalBanner.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-clip: border-box;
    background-size: contain;
}
@media screen and (min-width: 520px) {
    .banner {
    display: block;
    max-width: 100%;
    width: 100vw;
    height: calc(100vw * 0.523);
    margin: 0 auto;
    background-image: url(../images/2023graphic/2023FestivalBanner.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-clip: border-box;
    }
}
@media screen and (min-width: 1000px) {
    .banner {
    display: block;
    width: 1000px;
    height: 524px;
    margin: 0;
    background-image: url(../images/2023graphic/2023FestivalBanner.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-clip: border-box;
    }
}
.section {
    margin: 0;
    padding: 10px;
}
.section__header {
    margin: 0;
    padding: 1rem 0;
    font-size: 1.3rem;
    color:  #27326f;
    text-align: center;
    font-weight: bolder;
}
.section__text {
    margin: 0 0 2rem;
    padding: 0;
    text-align: justify;
}
.section__text--date {
    font-weight: bold;
    margin: 0 0 1rem;
    padding: 0;
}
.secondary__header {
    color: #f9b24a;
    font-weight: bold;
    margin: 0 0 10px 0;
}
.program-list {
    margin: 0 0 20px;
    padding: 0 0 0 20px;
}
.terms-list {
    margin: 0;
    padding: 0 0 20px 20px;
    list-style-type: decimal;
    line-height: 1.5;
}
.sub-list {
    list-style-type: lower-latin;
}
.register {
    margin: 10px auto;
    padding: 0;
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
}
.register__text {
    font-size: 1.2rem;
    font-weight: bold;
    text-align: center;
}
.register__button, .register__button:visited, .register__button:active {
    display: flex;
    margin: 0 0 20px 0;
    padding: 5px;
    width: 150px;
    height: 50px;
    background-color: #f9b24a;
    border-radius: 5px;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    font-weight: bold;
    font-size: 1.2rem;
    text-align: center;
    color: #004175;
    transition: color 0.2s ease-in;
}
.register__button:hover {
    color: #f9b24a;
    transition: color 0.2s ease-in;
}
.demos-container {
    display: none;
}
.demos-open {
    display: block;
}
.workshops-container {
    display: none;
}
.workshops-open {
    display: block;
}
/* ... */

